tests/baselines/reference/unusedLocalsAndObjectSpread.errors.txt
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(13,15): error TS6133: 'blah' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(20,18): error TS6133: 'bar' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(27,15): error TS6133: 'blah' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread.ts(27,24): error TS6133: 'bar' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndObjectSpread.ts (4 errors) ====
    declare var console: { log(a: any): void };
    
    function one() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo;
        console.log(bar);
    }
    
    function two() {
        const foo = { a: 1, b: 2 };
        // 'blah' is declared but never used
        const {a: blah, ...bar} = foo;
                  ~~~~
!!! error TS6133: 'blah' is declared but never used.
        console.log(bar);
    }
    
    function three() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo; // bar should be unused
                     ~~~
!!! error TS6133: 'bar' is declared but never used.
        //console.log(bar);
    }
    
    function four() {
        const foo = { a: 1, b: 2 };
        // 'blah' is declared but never used
        const {a: blah, ...bar} = foo; // bar should be unused
                  ~~~~
!!! error TS6133: 'blah' is declared but never used.
                           ~~~
!!! error TS6133: 'bar' is declared but never used.
        //console.log(bar);
    }
    